; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m68knommu/platform/coldfire/extr_intc.c_mcf_clrimr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m68knommu/platform/coldfire/extr_intc.c_mcf_clrimr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCF_MBAR = common dso_local global i64 0, align 8
@MCFSIM_IMR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mcf_clrimr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @MCF_MBAR, align 8
  %5 = load i64, i64* @MCFSIM_IMR, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @__raw_readl(i64 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  %10 = shl i32 1, %9
  %11 = xor i32 %10, -1
  %12 = and i32 %8, %11
  %13 = load i64, i64* @MCF_MBAR, align 8
  %14 = load i64, i64* @MCFSIM_IMR, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @__raw_writel(i32 %12, i64 %15)
  ret void
}

declare dso_local i32 @__raw_readl(i64) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
